# realtime_pollen_calibration

./: .copier-answers.yml  .gitignore  .mambarc  .mch-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.rst  CONTRIBUTING.md  HISTORY.md  Jenkinsfile  LICENSE  README.md  README.rst  USAGE.md  conda_deps.yml  config.yaml  environment.yml  get_data.sh  poetry.toml  pyproject.toml  run-mypy.sh  setup_env.sh  sonar-project.properties
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pre-commit.yml
data/: ALNUtthre.txt  BETUtthrs.txt  CORYtune.txt  POACsaisl.txt  POACtthrs.txt  fieldextra.nl  identify_testcase.py  jul_days_excl  laf2022020805_filtered  laf2022020806_filtered  laf2022022207_filtered  laf2022022208_filtered  pollen_measured_values_2022020805.atab  pollen_measured_values_2022022207.atab  pollen_modelled_values_2022022207.atab  retrieve_dwh.sh
data/atabs/: alnu_pollen_measured_values_2022020805.atab  alnu_pollen_measured_values_2022021314.atab  alnu_pollen_measured_values_2022022207.atab  alnu_pollen_measured_values_2022031114.atab  alnu_pollen_modelled_values_2022022207.atab  betu_pollen_measured_values_2022031814.atab  betu_pollen_measured_values_2022032309.atab  betu_pollen_measured_values_2022051314.atab  betu_pollen_modelled_values_2022032309.atab  cory_pollen_measured_values_2022021014.atab  cory_pollen_measured_values_2022021110.atab  cory_pollen_measured_values_2022032214.atab  cory_pollen_modelled_values_2022021110.atab  fieldextra.diagnostic  fieldextra_alnu.nl  fieldextra_betu.nl  fieldextra_cory.nl  (+7 more)
doc/: conf.py  index.rst  modules.rst
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
jenkins/: JenkinsJobPR  Jenkinsfile
notebooks/: COSMO- Analysis.ipynb  Dev_notebook.ipynb  PyCHAPo.ipynb  mapplot_cosmo_pollen.ipynb
realtime_pollen_calibration/: set_up.py  update_phenology.py  update_strength.py  utils.py
requirements/: dev-environment.yml  dev-requirements.yml  environment.yml  requirements.yml  setup-conda-env.sh  setup_grib_eccodes.sh  siteconfig.py
test/: conftest.py  test_update_phenology.py  test_update_strength.py  test_update_strengths.py  test_utils.py
test_local/: config.yaml  view
tools/: extract_pollen_measured.sh  extract_pollen_modelled.nl  get_data.sh  get_data_and_test.sh  run-mypy.sh  setup_env.sh
(+31 files in other folders)
