[tool.poetry]
package-mode = true
name = "realtime-pollen-calibration"
description = "Framework to update pollen input fields needed in ICON-ART"
version = "1.1.0"
license = "BSD-3-Clause"
authors = ["Andreas Pauling <andreas.pauling@meteoswiss.ch>", "Simon Adamov <simon.adamovg@meteoswiss.ch>"]
readme = "README.rst"

[[tool.poetry.source]]
name = "meteoswiss"
url = "https://service.meteoswiss.ch/nexus/repository/python-all/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.10"
click = "^8.1.8"
mchpy = "^3.0.0"
pyyaml = "^6.0.2"
xarray = "<2025.7.0" # Later version require python 3.11
numpy = "<2.3" # Later version require python 3.11
pandas = "^2.3.1"
eccodes = "^2.36.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pydata-sphinx-theme = "^0.16.1"
pylint = "^3.3.5"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
sphinx = "^8.1.3"
sphinx-autoapi = "^3.6.0"
yapf = "^0.43.0"
cfgrib = "^0.9.15.0"

[tool.poetry.scripts]
realtime-pollen-calibration = "realtime_pollen_calibration.cli:main"

[tool.pytest.ini_options]
addopts = "-s --log-cli-level=INFO"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)s | %(name)s | %(message)s"
log_cli_date_format = "%H:%M:%S"
log_auto_indent = true

[tool.yapf]
based_on_style = "pep8"
column_limit = "120"

[tool.pylint.master]
disable = [
    'C0114', # missing-module-docstring
    'C0115', # missing-class-docstring
    'C0116', # missing-function-docstring
    'W0511', # fix me or to-do comments are already covered by SonarQube
]

[tool.pylint.basic]
argument-naming-style = 'any'
attr-naming-style = 'any'

[tool.pylint.format]
# Maximum number of lines in a module.
max-line-length = 120

[tool.pylint.design]
# Minimum number of public methods for a class (see R0903).
min-public-methods = 0

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# to avoid mypy errors when importing modules from commons
# aka "module is installed, but missing library stubs or py.typed marker"
module = ["mchpy.*"]

[tool.coverage.run]
omit = ["test/**",  "doc/**"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
